# comptaquest-lite

./: .deployignore  .env.example  .gitignore  .htmlvalidate.json  CHANGELOG.md  Makefile  README.md  db.sqlite3.old  main.py  manage.py  package-lock.json  package.json  playwright.config.ts  pylint.txt  pyproject.toml  requirements.txt  sbrunserver.sh  secretbox.desktop  secretbox.sh  setup.cfg  tailwind.config.js  wagtail_hooks.py
.github/workflows/: check_code_quality.yml  check_quality.yml  check_tests.yml  deploy.yml  dispatch.yml  main.yml  quality.yml  security.yml  tests.yml
comptaquest/comptas/: account_abstract_model.py  account_current_admin.py  account_current_model.py  account_investment_admin.py  account_investment_model.py  admin.py  apps.py  choices.py  filters.py  forms.py  urls.py  views.py
comptaquest/consos/: apps.py  models.py  urls.py  views.py
comptaquest/healths/: apps.py  models.py  urls.py  views.py
comptaquest/users/: apps.py  forms.py  models.py  urls.py  views.py
comptaquest/utils/: apps.py  models.py  urls.py  views.py
config/: __init__.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py  production.py  test.py
diarylab/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
diarylab/migrations/: 0001_initial.py  0002_alter_diaryentry_date.py  0002_initial.py  0003_alter_diaryentry_content_alter_diaryentry_created_at_and_more.py  0004_alter_diaryentry_content_alter_diaryentry_date_and_more.py  0004_alter_diaryentry_date.py  0005_alter_diaryentry_date_alter_diaryentry_user_and_more.py  0006_alter_diaryentry_content_alter_diaryentry_date.py  0007_alter_diaryentry_date.py  0008_alter_diaryentry_date.py  0009_alter_diaryentry_date.py
escapevault/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
escapevault/migrations/: 0001_initial.py  0002_alter_nomadeposition_closing_date_and_more.py  0003_alter_nomadeposition_latitude_and_more.py  0003_nomadeposition_link_to_site_and_more.py  0004_alter_nomadeposition_category.py  0004_alter_nomadeposition_latitude_and_more.py  0005_alter_nomadeposition_category_and_more.py  0005_alter_nomadeposition_reviews.py
escapevault/templatetags/: filters.py
potionrun/chapters/: __init__.py  admin.py  apps.py  models.py  signals.py
potionrun/performances/: apps.py  urls.py  views.py
sami/: admin.py  apps.py  descriptions.py  forms.py  models.py  sami_model.py  samimetrics_model.py  urls.py  views.py
sami/migrations/: 0001_initial.py  0002_alter_sami_date.py  0002_initial.py  0003_alter_sami_date.py  0004_alter_sami_date.py  0005_alter_sami_date.py  0005_sami_outsidetime_sami_administrative_sami_computer_and_more.py  0006_alter_sami_date.py  0007_alter_sami_date.py
secretbox/dashboard/: admin.py  apps.py  choices.py  colorparameter_model.py  contact_forms.py  contact_views.py  filters.py  forms.py  models.py  todo_forms.py  todo_model.py  todo_views.py  urls.py  views.py
secretbox/tools/: apps.py  create_test_user.py  date_filters.py  date_tools.py  del_migration.sh  form_helpers.py  merge_report.py  models.py  models_tools.py  session.py  tooltip.py
secretbox/users/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
static/: manifest.json
static/css/: diarylab.css  email.css  footer.css  output.css  panneaul.css  style.css
static/images/: logo_sami.xcf
static/js/: sami.js  secretbox.js  service-worker.js  tailwind.config.js
static/src/: input.css
templates/: base.html
templates/base/: 403.html  404.html  500.html  footer.html  head.html  header.html  logo_header.html  title.html
templates/comptaquest/: list_account.html  wallet_confirm_delete.html  wallet_form.html  wallet_list.html
templates/dashboard/: chronometre-brouillon.js  contact.html  dashboard-brouillon.html  dashboard.html  url-view-update.py  urlviewupdate.py  view-duree-brouillon.py
templates/diarylab/: add_entry.html  delete_entry.html  list_entries.html
templates/escapevault/: add_position.html  delete_position.html  edit_position.html  escapevault_list.html  list_position.html  map.html  parameters.html
templates/generic/: add_template.html
templates/navbar/: footer_navbar.html  navbar.html  navbar_cq.html  navbar_ev.html  navbar_ev1.html  navbar_ev2.html  navbar_sb.html  navbar_sc.html
templates/registration/: login-old.html  login.html  logout.html  password_reset.html  password_reset_email.html
templates/sami/: add_sami.html  dashboard.html  list.html
templates/secretbox/: profile.html
test-results/: .last-run.json
test-results/tests-endtoend-evmap-the-l-63e4d-user-views-the-filtered-map-e2e/: error-context.md
test-results/tests-endtoend-login.setup.ts-Login-and-save-state-setup/: error-context.md
tests/: conftest.py
tests/auth/: session.json
tests/endtoend/: evmap.spec.ts  login.setup.ts  test_evmap.spec.ts
tests/factories/: account.py  codification.py  colorparameters.py  diarylab.py  member.py  nomadeposition.py  outgoings.py  place.py  sami.py  todo.py  transaction.py
tests/htmlcov/: class_index.html  diarylab.html  escapevault-e2e.html  escapevault.html  function_index.html  index.html  integration_report.html  main_py.html  manage_py.html  report_tests.html  sami.html  secretbox.html  status.json  unit_report.html  wagtail_hooks_py.html  z_0246a01906340d6f_0001_initial_py.html  z_0246a01906340d6f_0002_cquser_last_email_change_cquser_last_password_change_and_more_py.html  z_0246a01906340d6f___init___py.html  z_0aa2a3e198c5160c___init___py.html  z_0aa2a3e198c5160c_admin_py.html  z_0aa2a3e198c5160c_apps_py.html  z_0aa2a3e198c5160c_models_py.html  z_0aa2a3e198c5160c_urls_py.html  z_0aa2a3e198c5160c_views_py.html  z_0c277bd788190b56___init___py.html  z_0c277bd788190b56_test_diarylab_models_py.html  z_0ef9188798fe6ae0___init___py.html  z_12f653e1ff063d94_0001_initial_py.html  z_12f653e1ff063d94___init___py.html  z_1344714005db3014___init___py.html  z_1344714005db3014_admin_py.html  z_1344714005db3014_apps_py.html  z_1344714005db3014_forms_py.html  (+179 more)
(+91 files in other folders)
