[project]
name = "cq-20250513"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyascii==0.3.2",
    "asgiref==3.8.1",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "crispy-tailwind>=1.0.3",
    "defusedxml==0.7.1",
    "django==5.2.1",
    "django-appconf==1.1.0",
    "django-components>=0.139.1",
    "django-compressor==4.5.1",
    "django-crispy-forms>=2.4",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "django-filter==25.1",
    "django-modelcluster==6.4",
    "django-permissionedforms==0.1",
    "django-stubs-ext==5.2.0",
    "django-stubs[compatible-mypy]>=5.2.0",
    "django-taggit==6.1.0",
    "django-tasks==0.7.0",
    "django-treebeard==4.7.1",
    "djangorestframework==3.16.0",
    "draftjs-exporter==5.1.0",
    "et-xmlfile==2.0.0",
    "factory-boy>=3.3.3",
    "filetype==1.2.0",
    "idna==3.10",
    "laces==0.1.2",
    "openpyxl==3.1.5",
    "pillow==11.2.1",
    "pillow-heif==0.21.0",
    "pytest-django>=4.11.1",
    "rcssmin==1.1.2",
    "requests==2.32.3",
    "rjsmin==1.2.2",
    "safety>=3.5.0",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "tailwind==3.1.5b0",
    "telepath==0.3.1",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "wagtail==7.0",
    "willow==1.10.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "django-debug-toolbar>=5.2.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
]

[tool.black]
line_length = 120
target_version = ['py38']

[tool.flake8]
max-line-length = 120
exclude = ["*/migrations/*", "./.venv/*", ".git", "__pycache__"]
extend-ignore = ['E402','E501']

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"


[tool.pytest.init_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
testpaths = ["tests"]
addopts = "--reuse-db"
